--- a/templates/generate_qr.html
+++ b/templates/generate_qr.html
@@ -23,11 +23,11 @@
             <label for="subject">Subject</label>
             <select name="subject" id="subject" required>
                 <option value="" disabled selected>Select Subject</option>
-                <option value="Subject 1">Subject 1</option>
-                <option value="Subject 2">Subject 2</option>
-                <option value="Subject 3">Subject 3</option>
-                <option value="Subject 4">Subject 4</option>
-                <option value="Subject 5">Subject 5</option>
+                <option value="Cloud Computing">Cloud Computing</option>
+                <option value="Kotlin">Kotlin</option>
+                <option value="Software Testing">Software Testing</option>
+                <option value="Nosql with MongoDb">Nosql with MongoDb</option>
+                <option value="Adv Java">Adv Java</option>
             </select>
 
             <button type="submit" class="btn">Generate QR</button>
